--- a/aluraGeek/index.html
+++ b/aluraGeek/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Geek</title>
 
+    <link rel="stylesheet" href="./global.css">
     <link rel="stylesheet" href="./styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,9 @@
 <body>
     <header>
         <div class="direita">
-            <img src="./assets/logo-aluraGeek.svg" alt="Logo da AluraGeek">
+            <a class="link__logo" href="./index.html">
+                <img src="./assets/logo-aluraGeek.svg" alt="Logo da AluraGeek">
+            </a>
             <div class="search__bar">
                 <input class="search__input" type="text" placeholder="O que deseja encontrar?">
                 <button class="search__button"></button>
