--- a/aluraGeek/pages/login.html
+++ b/aluraGeek/pages/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
 
-    <link rel="stylesheet" href="./global.css">
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/login.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <header>
         <div class="direita">
             <a class="link__logo" href="./index.html">
-                <img src="./assets/logo-aluraGeek.svg" alt="Logo da AluraGeek">
+                <img src="../assets/logo-aluraGeek.svg" alt="Logo da AluraGeek">
             </a>
             <div class="search__bar">
                 <input class="search__input" type="text" placeholder="O que deseja encontrar?">
