--- a/aluraGeek/pages/produtos.html
+++ b/aluraGeek/pages/produtos.html
@@ -1,55 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alura Geek</title>
+    <title>AluraGeek</title>
 
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/produtos.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
 
 </head>
-
 <body>
+    
     <header>
         <div class="direita">
             <a class="link__logo" href="./index.html">
-                <img src="./assets/logo-aluraGeek.svg" alt="Logo da AluraGeek">
+                <img src="../assets/logo-aluraGeek.svg" alt="Logo da AluraGeek">
             </a>
             <div class="search__bar">
                 <input class="search__input" type="text" placeholder="O que deseja encontrar?">
                 <button class="search__button"></button>
             </div>
         </div>
-        <a class="login__button" href="./pages/login.html"><button>Login</button></a>
+        <a class="login__button" href="./login.html"><button>Login</button></a>
     </header>
-
-    <nav>
-        <div class="information">
-            <h1 class="information__title">Dezembro Promocional</h1>
-            <strong class="information__strong">Produtos selecionados com 33% de desconto</strong>
-            <button class="information__button">Ver consoles</button>
-        </div>
-    </nav>
 
     <main>
         <section class="products__section">
             <div class="products__top">
                 <h2 class="products__title">Star Wars</h2>
-                <a class="product__see-all-link" href="#">
-                    Ver tudo
-                    <img src="./assets/icon-arrow.svg" alt="Ícone de flecha">
-                </a>
+                <button class="products__add-product-button">Adicionar produto</button>
             </div>
             <div class="products">
                 <div class="product">
                     <div class="product__div-image">
-                        <img class="product__image" src="./assets/xicara-cabeca-stormTrooper.jpeg" alt="Xícara StarWars">
+                        <img class="product__image" src="../assets/xicara-cabeca-stormTrooper.jpeg" alt="Xícara StarWars">
                     </div>
                     <div class="product__information">
                         <p class="product__title">Produto XYZ</p>
@@ -59,7 +47,7 @@
                 </div>
                 <div class="product">
                     <div class="product__div-image">
-                        <img class="product__image" src="./assets/capacete-darth-vader.png" alt="Xícara StarWars">
+                        <img class="product__image" src="../assets/capacete-darth-vader.png" alt="Xícara StarWars">
                     </div>
                     <div class="product__information">
                         <p class="product__title">Produto XYZ</p>
@@ -69,7 +57,7 @@
                 </div>
                 <div class="product">
                     <div class="product__div-image">
-                        <img class="product__image" src="./assets/yoda.png" alt="Xícara StarWars">
+                        <img class="product__image" src="../assets/yoda.png" alt="Xícara StarWars">
                     </div>
                     <div class="product__information">
                         <p class="product__title">Produto XYZ</p>
@@ -79,7 +67,7 @@
                 </div>
                 <div class="product">
                     <div class="product__div-image">
-                        <img class="product__image" src="./assets/stormtrooper.png" alt="Xícara StarWars">
+                        <img class="product__image" src="../assets/stormtrooper.png" alt="Xícara StarWars">
                     </div>
                     <div class="product__information">
                         <p class="product__title">Produto XYZ</p>
@@ -89,7 +77,7 @@
                 </div>
                 <div class="product">
                     <div class="product__div-image">
-                        <img class="product__image" src="./assets/baby-yoda.png" alt="Xícara StarWars">
+                        <img class="product__image" src="../assets/baby-yoda.png" alt="Xícara StarWars">
                     </div>
                     <div class="product__information">
                         <p class="product__title">Produto XYZ</p>
